2008-04-24  Roland Mas  <lolando@debian.org>

	* etc/local.d/10database.header: Read database authentication info
	from HTTP headers in addition to environment variables.
	* plugins/mediawiki/mediawiki-skin/GForge.php: Ditto.
	* etc/httpd.d/httpd.secrets: Provide this info using the
	RequestHeader directive.
	* utils/install-apache.sh: Load appropriate module.

2008-03-15  Christian Bayle <bayle@debian.org>
	
	* Improve a bit Mantis and Webcalendar Plugins, so gforge don't crash
	* Added and use util_make_url_u, util_make_url_g ,
	util_make_link_u and util_make_link_g for /projects and /users link
	forcetype shouln'd be necessary to run gforge now
	* Rewrite jscook stuffs for docman, should be more readeable
	added expand/collapse buttons
	* Upgraded jscook (tree and menu) with last available version from
	http://jscook.yuanheng.org/JSCookTree/
	* Patched jscook so it takes in account myThemeXPBase on the model of 
	JSCookMenu

2008-03-11  Alain Peyrat <aljeux@free.fr>

	* New plugin online_help to display the gforge manual
	as a contextual online help (code moved in plugin).
	
	* New hook 'headermenu' to add a menu in the header top.

2008-03-10  Christian Bayle <bayle@debian.org>
	
	* Removed createLinkToUserHome function replaced by util_make_link_u
	* Removed as much php warning as possible
	* Migrate to util_make_url() and util_make_link()
	* - www/reporting/*,www/pm/*,www/softwaremap/*
	* - www/survey/*,www/stats/*,www/top/*
	* - www/export/*,www/developer/*,www/themes/*
	* - www/frs/*,www/activity/*,www/project/*
	* - www/news/*,www/pm/*,www/people/*,www/docman/*
	* - plugins/*
	* - www/snippet/*,www/include/*,www/admin/*
	* - www/my/*,www/tracker/*,www/search/*
	* introduced $sys_noforcetype to make possible to get rid of /projects
	and /users forcetype

2008-02-28  Roland Mas  <lolando@debian.org>

	* plugins/*: Migrate to util_make_url() and util_make_link().
	* www/forum/*: Ditto.

2008-02-27  Roland Mas  <lolando@debian.org>
